*Footer almost fixed - no bottom gap*

--- a/scss/application.css
+++ b/scss/application.css
@@ -318,7 +318,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   background-color: #fff;
-  margin: 0% 5%;
+  color: #666;
 }
 
 a {
@@ -326,21 +326,34 @@ a {
   text-decoration: none;
 }
 
-ul {
+.footer__list ul, .footer__list li {
   list-style-type: none;
   padding: 0px;
-}
-
-li {
   font-size: 13px;
 }
-li :visited, li :hover {
+.footer__list ul :visited, .footer__list ul :hover, .footer__list li :visited, .footer__list li :hover {
   text-decoration: underline;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 footer {
   margin-top: auto;
-  flex: 1 100%;
+  color: white;
+  background-color: #323544;
 }
 
 .footer__list {
@@ -350,18 +363,12 @@ footer {
   text-align: left;
 }
 
-body {
-  background-color: #ddd;
-}
-
 .container-dark {
   display: flex;
   flex-direction: row;
-  color: white;
-  background-color: #323544;
   justify-content: space-evenly;
-  align-items: flex-start;
-  text-align: left;
+  margin-right: 5%;
+  margin-left: 5%;
 }
 
 .container-x-dark {
@@ -369,9 +376,13 @@ body {
   flex-direction: row;
   color: white;
   background-color: #212330;
-  justify-content: flex-start;
-  align-items: flex-start;
-  text-align: center;
+  padding: 5 0 10;
+}
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .btn {
