--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -10,8 +10,7 @@ display: flex;
 flex-direction: column;
 min-height: 100vh;
 background-color: $white;
-margin: 0% 5%;
-
+color: $grey;
 }
 
 
@@ -20,19 +19,12 @@ a{
 	text-decoration: none;
 }
 
-
-ul{
-	list-style-type: none;
-	padding: 0px;
-	
-}
-
-li{
-	:visited, :hover{
+.footer__list{	
+ul, li{
+		list-style-type: none;
+		padding: 0px;
+		:visited, :hover{
 		text-decoration: underline;}
 		font-size: 13px;
-		
-}
-
-
-
+		}
+	}
